feat(site StreetFighter): site streetfighter com tentativa de criptografia e autenticacao

--- a/src/Modulo-05-C#/StreetFight/StreetFighter/Views/Shared/_Layout.cshtml
+++ b/src/Modulo-05-C#/StreetFight/StreetFighter/Views/Shared/_Layout.cshtml
@@ -12,16 +12,16 @@
 
     <div class="menu">
         <span class="links">
-            <a href="index.html">Inicio</a>
+            <a href="~/StreetFighter/Index">Inicio</a>
         </span>
         <span class="links">
-            <a href="https://www.google.com.br/search?q=Street+Fighter&tbm=nws">Noticia</a>
+            <a href="~/StreetFighter/Cadastro">Cadastro</a>
         </span>
         <span class="links">
-            <a href="ficha-tecnica.html">Ficha Técnica</a>
+            <a href="~/StreetFighter/FichaTecnica">Ficha Técnica</a>
         </span>
         <span class="links">
-            <a href="sobre.html">Sobre</a>
+            <a href="~/StreetFighter/Sobre">Sobre</a>
         </span>
     </div>
 
