fix(StreetFighter): resolver alguns bugs, TO_DO

--- a/src/Modulo-05-C#/StreetFight/StreetFighter/Views/StreetFighter/ListarPersonagem.cshtml
+++ b/src/Modulo-05-C#/StreetFight/StreetFighter/Views/StreetFighter/ListarPersonagem.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "ListarPersonagem";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-div class="opcoes_lista">
+<div class="opcoes_lista">
 @using (Html.BeginForm("ListarPersonagem", "StreetFighter", FormMethod.Get))
 {
     <span class="opcao">
