fix(StreetFighter): correçao de alguns erros

--- a/src/Modulo-05-C#/StreetFight/StreetFighter/Views/StreetFighter/Index.cshtml
+++ b/src/Modulo-05-C#/StreetFight/StreetFighter/Views/StreetFighter/Index.cshtml
@@ -3,7 +3,9 @@
     ViewBag.Title = "História";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<!DOCTYPE html>
 
+<html>
 
 <div class="titulo">
 
