--- a/src/Modulo-05-C#/StreetFight/StreetFighter/Views/StreetFighter/Cadastro.cshtml
+++ b/src/Modulo-05-C#/StreetFight/StreetFighter/Views/StreetFighter/Cadastro.cshtml
@@ -5,18 +5,11 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-@using (Html.BeginForm("FichaTecnica", "StreetFighter", FormMethod.Post, new { @class = "form-horizontal" }))
+@using (Html.BeginForm("ListarPersonagem", "StreetFighter", FormMethod.Post, new { @class = "form-horizontal" }))
 {
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
     @Html.HiddenFor(model => model.Id)
-    <div class="form-group">
-        @Html.LabelFor(model => model.Imagem, new { @class = "col-sm-2 control-label" })
-        <div class="col-sm-10">
-            @Html.TextBoxFor(model => model.Imagem, new { @class = "form-control" })
-            @Html.ValidationMessageFor(model => model.Imagem)
-        </div>
-    </div>
 
     <div class="form-group">
         @Html.LabelFor(model => model.Nome, new { @class = "col-sm-2 control-label" })
@@ -53,7 +46,7 @@
     <div class="form-group">
         @Html.LabelFor(model => model.Origem, new { @class = "col-sm-2 control-label" })
         <div class="col-sm-10">
-            @Html.DropDownListFor(model => model.Origem, (IEnumerable<SelectListItem>)ViewBag.ListaOrigem, "Selecione Local de nascimento:", new { @class = "form-control" })
+            @Html.DropDownListFor(model => model.Origem, (IEnumerable<SelectListItem>)ViewData["ListaOrigens"], new { @class = "form-control" })
             @Html.ValidationMessageFor(model => model.Origem)
         </div>
     </div>
@@ -66,6 +59,13 @@
         </div>
     </div>
 
+    <div class="form-group">
+        @Html.LabelFor(model => model.Imagem, new { @class = "col-sm-2 control-label" })
+        <div class="col-sm-10">
+            @Html.TextBoxFor(model => model.Imagem, new { @class = "form-control" })
+            @Html.ValidationMessageFor(model => model.Imagem)
+        </div>
+    </div>
 
     <div class="form-group">
         @Html.LabelFor(model => model.PersonagemOculto, new { @class = "col-sm-2 control-label" })
@@ -82,7 +82,10 @@
     </div>
 }
 
-<link href="~/Content/bootstrap.css" rel="stylesheet" />
+@section Styles {
+    <link href="~/Content/bootstrap.css" rel="stylesheet" />
+}
+
 <script src="~/Scripts/jquery-1.9.1.js"></script>
 <script src="~/Scripts/jquery.validate.js"></script>
 <script src="~/Scripts/jquery.validate.unobtrusive.js"></script>
