--- a/src/Modulo-05-C#/StreetFight/StreetFighter/Views/StreetFighter/FichaTecnica.cshtml
+++ b/src/Modulo-05-C#/StreetFight/StreetFighter/Views/StreetFighter/FichaTecnica.cshtml
@@ -1,28 +1,33 @@
-﻿
+﻿@using System.Globalization
 @{
-    ViewBag.Title = "FichaTecnica";
+    ViewBag.Title = "Ficha Técnica";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-
-<div class="titulo">
+<div>
+    <h2 class="bottom-title">@Model.Nome</h2>
 </div>
-<div id="resto">
-    <div>
-            <h2 class="bottom-title">
-                <strong>@(Model.Nome)</strong>
-            </h2>
-    </div>
-    <div id="imagem">
-        <img src="@Model.Imagem" style="height: 355px; margin-bottom: 46px;">
-    </div>
-    <div style="width: 400px;display: inline-block; margin-left: 70px;">
-        <strong>Nascimento:</strong> @(Model.DataNascimento.ToString("dd' de 'MMMM' de 'yyyy")).<br />
-        <strong>Altura:</strong> @(Model.Altura)cm.<br />
-        <strong>Peso:</strong> @(Model.Peso)kg.<br />
-        <strong>Origem:</strong> @(Model.Origem).<br />
-        <strong>Golpes especiais famosos:</strong> @(Model.GolpesEspeciaisFamosos).<br />
+<div>
+    <span>
+        <img src="@Model.Imagem" alt="Blanka">
+    </span>
+    <span class="descricao">
+        <p class="ficha"><strong>Nascimento:</strong> @(Model.Nascimento.ToString("dd' de 'MMMM' de 'yyyy")).</p>
+        <p class="ficha"><strong>Altura:</strong> @(Model.Altura)cm.</p>
+        <p class="ficha"><strong>Origem:</strong> @(Model.Origem).</p>
+        <p class="ficha"><strong>Peso:</strong> @(Model.Peso)kg.</p>
+        <p class="ficha"><strong>Golpes especiais:</strong> @(Model.GolpeEspecialFamoso).</p>
         <p class="ficha"><strong>Personagem oculto:</strong> @(Model.PersonagemOculto ? "Sim" : "Não").</p>
-    </div>
+    </span>
 </div>
 
+
+@section Styles {
+    <style>
+        img {
+            width: 300px;
+            height: auto;
+            display: inline;
+        }
+    </style>
+}
