--- a/src/modulo-05-dot-net/aula-09/Loja/Loja.Web/Views/Home/Index.cshtml
+++ b/src/modulo-05-dot-net/aula-09/Loja/Loja.Web/Views/Home/Index.cshtml
@@ -1,31 +1,41 @@
 ﻿@{
     ViewBag.Title = "Home Page";
 }
+<div class="opcoes_lista">
+    @using (Html.BeginForm("ListarPersonagem", "StreetFighterController", FormMethod.Get))
+    {
+        <span class="opcao">
+            <strong>
+                @Html.Label("Filtro: ")
+            </strong>
+            @Html.TextBox("filtro")
+        </span>
+    }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    @using (Html.BeginForm("Cadastro", "StreetFighterController"))
+    {
+        <span class="opcao">
+            <button type="submit">Editar</button>
+        </span>
+    }
 </div>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
-</div>
+@{
+    if (Model.Count == 0)
+    {
+        <h2>Não há nenhum produto cadastrado.</h2>
+    }
+    <h2> @TempData["Mensagem"] </h2>
+    foreach (var produto in Model)
+    {
+        <div class="produto">
+            <img src="@produto.Nome">
+            <span>
+
+                @Html.ActionLink(produto.Nome, "FichaTecnica", "StreetFighterController", new { Id = produto.id }, null)
+            </span>
+            @Html.ActionLink("Excluir", "Excluir", "StreetFighterController", new { idPersonagem = personagem.Id }, new { @class = "item_opcao" })
+            @Html.ActionLink("Editar", "Cadastro", "StreetFighterController", new { idPersonagem = personagem.Id }, new { @class = "item_opcao" })
+        </div>
+    }
+}
