feat(Loja): tentantiva 1

--- a/src/modulo-05-dot-net/aula-09/Loja/Loja.Web/Views/Login/Index.cshtml
+++ b/src/modulo-05-dot-net/aula-09/Loja/Loja.Web/Views/Login/Index.cshtml
@@ -1,7 +1,8 @@
-﻿
+﻿@model Loja.Web.Models.UsuarioModel
 @{
     ViewBag.Title = "Index";
 }
+
 
 <h2>Login</h2>
 
@@ -12,4 +13,8 @@
     @Html.TextBox("email", "", new { placeholder = "email" })
     @Html.Password("senha", "", new { placeholder = "senha" })
     <button type="submit">Entrar</button>
+}
+@section scripts {
+    <script src="~/Scripts/jquery.validate.min.js"></script>
+    <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
 }
