--- a/src/modulo-07-reforco-dot-net/LojaDeItens/LojaDeItens.Web/Views/ItemMagico/Editar.cshtml
+++ b/src/modulo-07-reforco-dot-net/LojaDeItens/LojaDeItens.Web/Views/ItemMagico/Editar.cshtml
@@ -10,7 +10,8 @@
     @using (Ajax.BeginForm("Salvar", "ItemMagico", new AjaxOptions
     {
         HttpMethod = "Post",
-        OnSuccess = "itemMagicoEditar.sucessoNoCadastro"
+        OnSuccess = "itemMagicoEditar.sucessoNoCadastro",
+        OnFailure = "itemMagicoEditar.falhaNoCadastro"
     }))
     {
         
